[project]
requires-python = ">3.11.2"

[tool.poetry]
name = "email-assistant"
version = "0.1.0"
description = "An AI email classifier & assistant"
authors = ["Ryan <ryan@rmslabs.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "5.1.0"
datasets = "4.5.0"
peft = "0.18.1"
bitsandbytes = "0.49.1"
pandas = "3.0.0"
scikit-learn = "1.8.0"
fastapi = "0.128.3"
uvicorn = "0.40.0"
mlflow = "3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
